examples/test/testpolicy18631.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18631
  namespace: namespace354
spec:
  podSelector:
    matchLabels:
      key29: value19
      key4: value21
      key36: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value19
      podSelector:
        matchLabels:
          key16: value7
          key17: value31
          key42: value11
